--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">KV</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,6 +54,7 @@
         </ul>
       </div>
     </nav>
+
     <div id="root"></div>
     <!--
       To create a production bundle, use `npm run build` or `yarn build`.
