--- a/public/index.html
+++ b/public/index.html
@@ -55,11 +55,10 @@
           </li>
         </ul>
       </div>
-    </nav>
+    </nav> 
+    <a href="index2.html">testing</a>
 
     <div id="root"></div>
-    <!--
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+
   </body>
 </html>
